
Format:
* what about empty binary xml data in the event record? does it only contain a 0x00 byte?

Debug:
* libfwevt: character reference print trailing data
* handle empty XML document:
  libevtx_record_values_read_xml_document: XML document:
  libfwevt_xml_tag_debug_print: invalid XML tag.

Recovery:
* scan for records in chunk free space

20150105
* 2015 update

20141229
* updated dependencies
* updated version for release

20141228
* updated dpkg files

20141222
* worked on Python 3 support

20141220
* worked on Python 3 support
* worked on tests

20141117
* code clean up

20141112
* changes to expose the event identifier qualifiers in the Python bindings

20141026
* changes for deployment

20141019
* changes for deployment

20141009
* updated dependencies and corresponding changes

20141004
* update Python-bindings tests

20140929
* removed README.macosx
* changes for project site move

20140901
* bug fix in Python-bindings

20140731
* bug fix in Python-bindings

20140723
* worked on dpkg debug packages support

20140531
* updated msvscpp files

20140530
* updated dependencies
* worked on Python-bindings
* replaced PackageMaker for pkgbuild

20140402
* code clean up

20140323
* worked on Python-bindings

20140317
* updated dependencies
* worked on setup.py
* worked on Python-bindings

20140210
* added evtxexport man page

20140131
* removed examples

20140112
* updated dependencies

20140105
* 2014 update

20132111
* small fix in evtxexport -h output
* updated dependencies
* worked on Python bindings

20131013
* updated dependencies

20131009
* improved dpkg files

20130929
* worked on setup.py, largely for MSI builds

20130923
* updated dependencies

20130909
* updated dependencies
* worked on libcthreads build support

20130727
* updated dependencies
* pyevtx
  - changed event identifier to an unsigned long
  - fixes for >2G file objects in BFIO glue code

20130718
* updated dependencies
* removed unnecessary restriction in library include headers

20130713