@@ -112,12 +112,11 @@ stamp-h[1-9]
 /include/libevtx/types.h
 /libevtx/libevtx.rc
 /libevtx/libevtx_definitions.h
-/pyevtx/setup.py
 /evtxtools/evtxexport
 /evtxtools/evtxinfo
-/tests/input
 /tests/evtx_test_open_close
 /tests/evtx_test_set_ascii_codepage
+/tests/input
 /tests/tmp*
 
 # Local library dependencies specific files
