@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libevtx],
- [20150105],
+ [20150822],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -253,7 +253,6 @@ AC_CONFIG_FILES([common/types.h])
 AC_CONFIG_FILES([dpkg/changelog])
 AC_CONFIG_FILES([dpkg/copyright])
 AC_CONFIG_FILES([libevtx/libevtx.rc])
-AC_CONFIG_FILES([pyevtx/setup.py])
 AC_CONFIG_FILES([libevtx.pc])
 AC_CONFIG_FILES([libevtx.spec])
 dnl Have configure write its configuration
