@@ -76,6 +76,9 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20150822
+* worked on setup.py
+
 20150105
 * 2015 update
 
